--- a/ios/Live Centre/html/index.html
+++ b/ios/Live Centre/html/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div id="app"></div>
-    Live Centre
+    <div style="position:absolute;top:50%;left:50%;transform: translate3d(-50%,-50%, 0);font-size: xx-large;">Live Centre</div>
     <script src="js/main.js"></script>
 </body>
 </html>
