--- a/android/app/src/main/assets/index.html
+++ b/android/app/src/main/assets/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html>
+
 <head>
+    <title>Live Center</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui" />
+    <link rel="stylesheet" href="css/main.min.css">
 
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui"/>
-    <meta name="apple-mobile-web-app-capable" content="yes"/>
-    <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
-
-    <title>Live Centre</title>
 </head>
+
 <body>
-    <div id="app"></div>
-    <div style="position:absolute;top:50%;left:50%;transform: translate3d(-50%,-50%, 0);font-size: xx-large;">Live Centre</div>
-    <script src="js/main.js"></script>
+    <div id="root"></div>
+    <script src="js/main.min.js"></script>
+
 </body>
+
 </html>
