--- a/www/app/index.html
+++ b/www/app/index.html
@@ -6,14 +6,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui" />
     <!-- build:css -->
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/bundle.css">
     <!-- endbuild -->
 </head>
 
 <body>
     <div id="root"></div>
     <!-- build:js -->
-    <script src="js/main.js"></script>
+    <script src="js/bundle.js"></script>
     <!-- endbuild -->
 </body>
 
