--- a/ios/Live Centre/html/index.html
+++ b/ios/Live Centre/html/index.html
@@ -5,12 +5,17 @@
     <title>Live Center</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui" />
-    <link rel="stylesheet" href="css/bundle.min.css">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <!-- build:css -->
+    <link rel="stylesheet" href="css/bundle.css">
+    <!-- endbuild -->
 </head>
 
 <body>
     <div id="root"></div>
-    <script src="js/bundle.min.js"></script>
+    <!-- build:js -->
+    <script src="js/bundle.js"></script>
+    <!-- endbuild -->
 </body>
 
 </html>
