--- a/android/app/src/main/assets/index.html
+++ b/android/app/src/main/assets/index.html
@@ -6,16 +6,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui" />
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <!-- build:css -->
-    <link rel="stylesheet" href="css/bundle.css">
-    <!-- endbuild -->
+    <link rel="stylesheet" href="css/bundle.min.css">
 </head>
 
 <body>
     <div id="root"></div>
-    <!-- build:js -->
-    <script src="js/bundle.js"></script>
-    <!-- endbuild -->
+    <script src="js/bundle.min.js"></script>
 </body>
 
 </html>
