--- a/www/app/index.html
+++ b/www/app/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Live Center</title>
+    <title>IMR</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui" />
     <meta name="apple-mobile-web-app-capable" content="yes">
