--- a/android/app/src/main/assets/index.html
+++ b/android/app/src/main/assets/index.html
@@ -2,16 +2,23 @@
 <html>
 
 <head>
-    <title>Live Center</title>
+    <title>IMR</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui" />
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <link rel="stylesheet" href="css/bundle.min.css">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!-- build:css -->
+    <link rel="stylesheet" href="css/bundle.css">
+    <!-- endbuild -->
 </head>
 
 <body>
     <div id="root"></div>
-    <script src="js/bundle.min.js"></script>
+    <!-- build:js -->
+    <script src="js/bundle.js"></script>
+    <!-- endbuild -->
 </body>
 
 </html>
