--- a/www/socketServer/index.html
+++ b/www/socketServer/index.html
@@ -26,6 +26,15 @@
     <button class='penalty-card red-card'></button>
     <button class='penalty-card yellow-card'></button>
 
+    <br /><br />
+
+    <h2>New Time Limited Event</h2>
+    <label> Title </label>
+    <input type='text' /> <br /> <br />
+    <label> Minutes </label>
+    <input type='number'> <br /><br />
+    <button>Send</button>
+
     <script src="/socket.io/socket.io.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.2.1.js"
