LIVE-131 Added Login Modal

--- a/www/app/index.html
+++ b/www/app/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script src="https://use.fontawesome.com/7497a936ef.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase.js"></script>
     <!-- build:css -->
     <link rel="stylesheet" href="css/bundle.css">
     <!-- endbuild -->
